--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "ejs": "^3.1.10",
     "express": "^4.21.2",
     "express-session": "^1.18.1",
+    "method-override": "^3.0.0",
     "mongoose": "^8.13.0",
     "morgan": "^1.10.0",
     "session": "^0.1.0"
